--- a/client/app/page/display/style.css
+++ b/client/app/page/display/style.css
@@ -51,19 +51,27 @@
 
 .display-evenement {
     height: 100px;
+    background-image: url(assets/images/ewUIL.png);
 }
 
 .icon-size {
     height: 72px;
     width: 72px;
 }
-.main-souris{
-    cursor:hand;
+
+.main-souris {
+    cursor: hand;
 }
 
-/*.position-button{
-    position: absolute;
-}*/
+.place-titre {
+    padding-top: 0px;
+
+}
+
+.md-toolbar-tools {
+    height: 64px;
+    max-height: 64px;
+}
 
 /*
 Copyright 2016 Google Inc. All Rights Reserved.
