--- a/client/app/search/style.css
+++ b/client/app/search/style.css
@@ -1,10 +1,6 @@
-/*md-input-container.md-input-focused .md-input {
-    padding-bottom: 0;
-    border-width: 0 0 0 0;
+md-input-container .md-errors-spacer {
+    min-height: 16px;
 }
-md-input-container .md-input {
-    border-width: 0 0 0 0;
-}*/
 .search-place{
     margin-top: 15px;
     margin-bottom: 0px;
