--- a/client/app/page/display/style.css
+++ b/client/app/page/display/style.css
@@ -58,7 +58,29 @@
     height: 72px;
     width: 72px;
 }
+.size-dialog-add{
+    height: 370px;
+    width: 500px;
+}
+.file_input_div {
+    margin: auto;
+    width: 250px;
+    height: 40px;
+}
 
+.file_input {
+    float: left;
+}
+
+#file_input_text_div {
+    width: 200px;
+    margin-top: -8px;
+    margin-left: 5px;
+}
+
+.none {
+    display: none;
+}
 .main-souris {
     cursor: hand;
 }
