--- a/client/0blocks/layout/dashboard/sidebar/sidebarleft.html
+++ b/client/0blocks/layout/dashboard/sidebar/sidebarleft.html
@@ -10,7 +10,7 @@
 <div layout="column">
 
     <md-menu-item>
-        <md-button ng-click="goToDisplay()" aria-label="Afficher">
+        <md-button ng-click="vm.goToDisplay()" aria-label="Afficher">
             <md-icon md-svg-icon="image:ic_collections_24px"></md-icon>
             <span>Evenements</span>
         </md-button>
@@ -19,7 +19,7 @@
     <md-divider></md-divider>
 
     <md-menu-item>
-        <md-button ng-click="goToContact()" aria-label="Contact">
+        <md-button ng-click="vm.goToContact()" aria-label="Contact">
             <md-icon md-svg-icon="communication:ic_contacts_24px"></md-icon>
             Contact
         </md-button>
