--- a/client/0blocks/layout/dashboard/style.css
+++ b/client/0blocks/layout/dashboard/style.css
@@ -1,9 +1,29 @@
-.full-height {
+/*.full-height {
     min-height: 100vh;
-}
+}*/
 
 .toolbar-height {
-    min-height: 50px;
+    height: 56px;
+    min-height: 56px;
+    max-height: 56px;
+}
+.size-content{
+    height: calc(100vh - 246px);
+    min-height: calc(100vh - 246px);
+    max-height: calc(100vh - 246px);
+    overflow-y: auto;
+}
+.size-search{
+    height: 40px;
+    min-height: 40px;
+    max-height: 40px;
+}
+.display-evenement {
+    height: 150px;
+    min-height: 150px;
+    max-height: 150px;
+    background-image: url(assets/images/ewUIL.png);
+    box-sizing: initial;
 }
 
 h2 {
@@ -28,10 +48,10 @@ md-sidenav {
     padding-top: 0px;
 }
 
-toolbar:not(.md-menu-toolbar) {
+/*toolbar:not(.md-menu-toolbar) {
     background-color: rgb(90, 113, 239);
     color: rgba(255, 255, 255, 0.87);
-}
+}*/
 
 md-toolbar.md-default-theme.md-hue-2:not(.md-menu-toolbar), md-toolbar.md-hue-2:not(.md-menu-toolbar) {
     background-color: rgb(2, 119, 189);
