--- a/client/app/page/accueil2/style.css
+++ b/client/app/page/accueil2/style.css
@@ -1,16 +1,16 @@
 *, *:before, *:after {
-  box-sizing: border-box;
+  /*box-sizing: border-box;
   margin: 0;
-  padding: 0;
+  padding: 0;*/
 }
 
 html, body {
-  font-size: 62.5%;
+  /*font-size: 62.5%;*/
   /*height: 100%;*/
 }
 @media (max-width: 768px) {
   html, body {
-    font-size: 50%;
+    /*font-size: 50%;*/
   }
 }
 
